<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".RegisterActivity">


            <ScrollView
                android:id="@+id/ScrollView_MainMenu"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:gravity="center"
                        android:orientation="vertical">


                        <RelativeLayout
                            android:layout_width="110dp"
                            android:layout_height="110dp"
                            android:background="@drawable/grad_button_line">

                            <ImageView
                                android:id="@+id/Image_newUser_register"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginEnd="5dp"
                                android:layout_marginBottom="5dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/userprofile" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/Image_upload_camera"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="-20dp"
                            android:background="@drawable/grad_blue_circle"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center">

                            <ImageView

                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/photocamera" />

                        </RelativeLayout>

                        <LinearLayout
                            android:id="@+id/LinearLayout_form_register"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/user_register_email"
                                android:layout_width="280dp"
                                android:layout_height="50dp"
                                android:autofillHints="email"
                                android:background="@drawable/grad_button_line"
                                android:hint="@string/enter_email"
                                android:inputType="textEmailAddress"
                                android:padding="16dp"
                                android:textColor="@color/white"
                                android:textColorHint="@color/mediumGray"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/user_register_password"
                                android:layout_width="280dp"
                                android:layout_height="50dp"
                                android:layout_marginTop="15dp"
                                android:autofillHints="password"
                                android:background="@drawable/grad_button_line"
                                android:hint="@string/enter_password"
                                android:inputType="textPassword"
                                android:padding="16dp"
                                android:textColor="@color/white"
                                android:textColorHint="@color/mediumGray"
                                android:textSize="12sp"
                                android:textStyle="bold" />


                            <EditText
                                android:id="@+id/user_Register_UserName"
                                android:layout_width="280dp"
                                android:layout_height="50dp"
                                android:layout_marginTop="15dp"
                                android:background="@drawable/grad_button_line"
                                android:focusable="true"
                                android:hint="Enter UserName"
                                android:padding="16dp"
                                android:textColor="@color/white"
                                android:textColorHint="@color/mediumGray"
                                android:textSize="13sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/user_register_firstName"
                                android:layout_width="280dp"
                                android:layout_height="50dp"
                                android:layout_marginTop="15dp"
                                android:autofillHints="email"
                                android:background="@drawable/grad_button_line"
                                android:hint="@string/enter_first_name"
                                android:padding="16dp"
                                android:textColor="@color/white"
                                android:textColorHint="@color/mediumGray"
                                android:textSize="13sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/user_register_LastName"
                                android:layout_width="280dp"
                                android:layout_height="50dp"
                                android:layout_marginTop="15dp"
                                android:autofillHints="password"
                                android:background="@drawable/grad_button_line"
                                android:hint="@string/enter_last_name"
                                android:padding="16dp"
                                android:textColor="@color/white"
                                android:textColorHint="@color/mediumGray"
                                android:textSize="13sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/LinearLayout_display_error_email_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginBottom="20dp"
                            android:background="@drawable/grad_error_message"
                            android:elevation="10dp"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <TextView
                                android:id="@+id/first_name_error_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:lineHeight="16sp"
                                android:padding="2dp"
                                android:text="First Name is required."
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                android:visibility="gone" />

                            <TextView
                                android:id="@+id/last_name_error_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:lineHeight="16sp"
                                android:padding="2dp"
                                android:text="Last Name is required."
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                android:visibility="gone" />

                            <TextView
                                android:id="@+id/email_error_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:lineHeight="16sp"
                                android:padding="2dp"
                                android:text="Please enter your email address."
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                android:visibility="gone" />

                            <TextView
                                android:id="@+id/email_error_valid_email_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:lineHeight="16sp"
                                android:padding="2dp"
                                android:text="Please enter a valid GMAIL account."
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                android:visibility="gone" />

                            <TextView
                                android:id="@+id/password_error_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:lineHeight="16sp"
                                android:padding="2dp"
                                android:text="Please indicate your password."
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                android:visibility="gone" />

                            <TextView
                                android:id="@+id/valid_password_error_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:lineHeight="16sp"
                                android:padding="2dp"
                                android:text="Password Must be 9 letters and Alphanumeric."
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                android:visibility="gone" />

                            <TextView
                                android:id="@+id/_usernameError_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="2dp"
                                android:text="Username is Required."
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                android:visibility="gone" />


                        </LinearLayout>

                        <androidx.cardview.widget.CardView
                            android:layout_width="280dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            app:cardBackgroundColor="@color/blue"
                            app:cardCornerRadius="14dp">

                            <LinearLayout
                                android:id="@+id/LinearLayout_Register"
                                android:layout_width="280dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:background="@drawable/grad_button_app"
                                android:clickable="true"
                                android:elevation="7dp"
                                android:focusable="true"
                                android:gravity="center"
                                android:orientation="horizontal"
                                android:requiresFadingEdge="vertical"
                                android:translationX="1dp"
                                android:translationY="-2dp"
                                android:translationZ="5dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/create_your_account"
                                    android:textAlignment="center"
                                    android:textAllCaps="false"
                                    android:textColor="@color/white"
                                    android:textSize="15sp"
                                    android:textStyle="bold" />

                                <ProgressBar
                                    android:id="@+id/progressBarID"
                                    android:layout_width="25dp"
                                    android:layout_height="28dp"
                                    android:layout_marginStart="10dp"
                                    android:elevation="2dp"
                                    android:indeterminate="true"
                                    android:indeterminateTint="@color/white"
                                    android:visibility="gone" />
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

        </RelativeLayout>

